k8s/ingress/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: elevate.test
      http:
        paths:
          # - path: /?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: client-srv
          #       port:
          #         number: 80
          - path: /api/v1/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/v1/profile/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/v1/investor/?(.*)
            pathType: Prefix
            backend:
              service:
                name: investors-srv
                port:
                  number: 3000
          - path: /api/v1/search/?(.*)
            pathType: Prefix
            backend:
              service:
                name: search-srv
                port:
                  number: 3000
          - path: /api/v1/founder/?(.*)
            pathType: Prefix
            backend:
              service:
                name: founders-srv
                port:
                  number: 3000
          - path: /api/v1/ideas/?(.*)
            pathType: Prefix
            backend:
              service:
                name: ideas-srv
                port:
                  number: 3000
